[gd_scene load_steps=8 format=3 uid="uid://csqsc35yner"]

[ext_resource type="Script" uid="uid://0o0os1yjw5w" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dmw3yudy5xyvl" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dcsuqv5wdvwg0" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://dmv4xvelfnqot" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://hskldlmnj2o5" path="res://art/House In a Forest Loop.ogg" id="4_7mycd"]
[ext_resource type="AudioStream" uid="uid://bbv3exonwrotn" path="res://art/gameover.wav" id="5_272bh"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 481, 1, 0, 0, 0, 0, 480, 648, 0, 0, 0, 0, -1, 647, 0, 0, 0, 0, -1, 4, 0, 0, 0, 0, 1, 4, 0, 0, 0, 0, 481, 1, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 481, 1)
}
point_count = 11

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.529985, 0.161376, 0.231757, 1)

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7mycd")
parameters/looping = false

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_272bh")

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0xm2m")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(481, 1)
rotation = 1.57234

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
